<resources>
    <string name="app_name">Fahrradverleih (Android)</string>
    <string name="startup_welcome_title">Willkommen!</string>
    <string name="login">Anmelden</string>
    <string name="startup_welcome_or">oder</string>
    <string name="register">Registrieren</string>
    <string name="password">Passwort</string>
    <string name="email_address">E-Mail Adresse</string>
    <string name="nav_tab_map">Suchen</string>
    <string name="nav_tab_ausleihen">Ausleihen</string>
    <string name="nav_tab_profil">Profil</string>
    <string name="error_panel_icon_description">Fehler-Icon</string>
    <string name="error_panel_title">Ein kritischer Fehler ist aufgetreten</string>
    <string name="error_panel_retry_button">Erneut Versuchen</string>
    <string name="profile_logout_button">Abmelden</string>
    <string name="profile_apply_button">Änderungen Speichern</string>
    <string name="profile_input_vorname">Vorname</string>
    <string name="profile_input_nachname">Nachname</string>
    <string name="profile_input_email">E-Mail Adresse</string>
    <string name="profile_configure_login_button">Anmeldung Ändern</string>
    <string name="profile_input_id">Profil ID</string>
    <string name="item_ausleihe_icon_description">Fahrrad-Icon</string>
    <string name="item_ausleihe_return_button">Zurückgeben</string>
    <string name="item_end_of_list_message">Keine weiteren Elemente.</string>
    <string name="ausleihe_beenden_title">Rückgabestation auswählen</string>
    <string name="cancel">Abbrechen</string>
    <string name="ausleihe_beenden_confirm">Rückgabe Bestätigen</string>
    <string name="item_button_select">Auswählen</string>
    <string name="rad_kategorie_verfuegbar">Verfügbar: %d</string>
    <string name="rad_details_reservieren_button">Reservieren</string>
    <string name="rad_details_buchen_button">Jetzt Buchen</string>
    <string name="go_back_button">Zurück</string>
    <string name="neue_ausleihe_subtitle">Fahrrad buchen</string>
    <string name="neue_ausleihe_buchung_button">Buchung Bestätigen</string>
    <string name="neue_ausleihe_dauer_label">Rad ausleihen für</string>
    <string name="neue_ausleihe_dauer_unit_label">h</string>
    <string name="neue_ausleihe_button_minus">−</string>
    <string name="neue_ausleihe_button_plus">+</string>
    <string name="rad_auswahl_subtitle_typ">Radtyp auswählen</string>
    <string name="rad_auswahl_subtitle_rad">Fahrrad auswählen</string>
    <string name="neue_ausleihe_error_message">Ein Fehler ist aufgetreten</string>
    <string name="app_title">Fahrradverleih</string>
    <string name="monheim_am_rhein">Monheim am Rhein</string>
    <string name="startup_toolbar_logo_description">Monheim am Rhein Logo</string>
    <string name="login_email_icon_description">E-Mail Icon</string>
    <string name="login_password_icon_description">Passwort Icon</string>
    <string name="view_icon_input_icon_description">Eingabefeld Icon</string>
</resources>