<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="32dp"
    tools:context=".widget.ErrorPanelFragment">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_error"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/error_panel_icon_description"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_panel_title"
        android:layout_marginBottom="12dp"
        />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_panel_retry_button"
        android:textColor="@color/brand_primary"
        />

</LinearLayout>