<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ausleihe_beenden.AusleiheBeendenDialogFragment">

    <!-- Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/dialog_toolbar"
            style="@style/Theme.FahrradverleihAndroid.FullscreenDialog.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:logo="@drawable/ic_location"
            app:subtitle="@string/neue_ausleihe_subtitle"
            tools:title="Lichtenberger Straße" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Buttons am unteren Bildschirmrand -->
    <LinearLayout
        android:id="@+id/bottom_buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/bottom_buttons_margin"
        android:layout_marginEnd="@dimen/bottom_buttons_margin"
        android:layout_marginBottom="@dimen/bottom_buttons_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buchen"
            style="@style/Theme.FahrradverleihAndroid.PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/neue_ausleihe_buchung_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            style="@style/Theme.FahrradverleihAndroid.SecondaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_buttons_gap"
            android:text="@string/go_back_button" />

    </LinearLayout>

    <!-- Buchen-Panel -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout">

        <!-- Rad-Info -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/rad_icon"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/item_ausleihe_icon_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/bike_ebike" />

            <LinearLayout
                android:id="@+id/extensions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rad_icon"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/rad_typ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    tools:text="E-Bike" />

                <TextView
                    android:id="@+id/tarif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/rad_item_info_margin"
                    tools:text="Tarif: EUR 7 für 3 Stunde(n)" />

                <TextView
                    android:id="@+id/id_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/rad_item_info_margin"
                    tools:text="ID: R-0004" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Dauer -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/neue_ausleihe_dauer_label" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dauer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="52sp"
                android:textStyle="bold"
                tools:text="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/neue_ausleihe_dauer_unit_label"
                android:textColor="@color/grey"
                android:textSize="52sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            tools:text="Gesamtpreis EUR 7\nRückgabe bis 15:35 Uhr" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/minus"
                style="@style/Theme.FahrradverleihAndroid.PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:text="@string/neue_ausleihe_button_minus" />

            <Button
                android:id="@+id/plus"
                style="@style/Theme.FahrradverleihAndroid.PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/neue_ausleihe_button_plus" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>