<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ausleihe_beenden.AusleiheBeendenDialogFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/dialog_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:title="@string/ausleihe_beenden_title"
            tools:subtitle="Rad-ID: R0003" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/bottom_buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/bottom_buttons_margin"
        android:layout_marginEnd="@dimen/bottom_buttons_margin"
        android:layout_marginBottom="@dimen/bottom_buttons_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            style="@style/Theme.FahrradverleihAndroid.SecondaryButton"
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            style="@style/Theme.FahrradverleihAndroid.PrimaryButton"
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_buttons_gap"
            android:text="@string/ausleihe_beenden_confirm" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
        app:layout_constraintBottom_toTopOf="@id/bottom_buttons_container">

        <RadioGroup
            android:id="@+id/radio_container"
            android:layout_marginTop="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>